# BollarMoney

./: .gitignore  Cargo.toml  MEDIUM_PRIORITY_FIXES.md  README.md  SECURITY.md  deploy-testnet.sh  dfx.json  package.json  production.toml  tasks.md  technical-design.md  webpack.config.js
bollar-canister/: Cargo.toml
bollar-canister/src/: bollar_canister.did  btc_verification_standalone.rs  btc_verification_tests.rs  cdp.rs  cdp_creation.rs  closure.rs  errors.rs  health.rs  lib.rs  liquidation.rs  main.rs  mint.rs  minting.rs  price.rs  simple_validation.rs  storage.rs  types.rs
bollar-canister/tests/: btc_validation_test.rs  cdp_integration_test.rs  cdp_tests.rs  liquidation_test.rs  minting_integration_test.rs  minting_test.rs  simple_cdp_test.rs  unit_tests.rs
docs/: API_SPEC.md  ARCHITECTURE.md  DESIGN.md  TEST_STRATEGY.md  USER_STORIES.md
features/01-cdp-creation/: requirements.md
features/02-bollar-minting/: requirements.md
features/03-liquidation-engine/: requirements.md
features/04-oracle-integration/: requirements.md
features/05-input-validation/: requirements.md
features/06-security-performance/: requirements.md
features/07-error-handling/: requirements.md
src/bollar_money_backend/: Cargo.toml  bollar_money_backend.did
src/bollar_money_backend/deploy/: mainnet.sh  testnet.sh
src/bollar_money_backend/src/: auth.rs  backup_recovery.rs  e2e_tests.rs  emergency.rs  error.rs  error_tests.rs  exchange.rs  exchange_tests.rs  ic_api.rs  input_validation.rs  integration_tests.rs  lending.rs  lib.rs  liquidation.rs  medium_priority_tests.rs  monitoring.rs  oracle.rs  performance.rs  pool.rs  reorg.rs  safe_math.rs  secure_logging.rs  stability.rs  state_manager.rs  test_utils.rs  tests.rs  types.rs  validation.rs
src/bollar_money_frontend/src/: App.jsx  index.html
src/bollar_money_frontend/src/components/: Dashboard.jsx  DepositMint.jsx  Layout.jsx  Liquidation.jsx  RepayWithdraw.jsx  WalletConnector.jsx
src/bollar_money_frontend/src/contexts/: WalletContext.jsx
src/bollar_money_frontend/src/services/: api.js
(+1 files in other folders)
