[package]
name = "bollar-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ICP CDK (兼容版本)
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-cdk-timers = "0.9"

# 序列化
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 稳定存储
ic-stable-structures = "0.6"

# 错误处理
thiserror = "1.0"

# 数学计算
num-traits = "0.2"

[dev-dependencies]
# 测试框架
rstest = "0.18"

[[bin]]
name = "bollar-canister"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'