[package]
name = "bollar_money_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
hex = "0.4.3"
ic-stable-structures = "0.6.9"
ciborium = "0.2.2"
ree-types = { git = "https://github.com/octopus-network/ree-types.git", rev = "3d0fb503384082bdeaf368305c4229801ee9ebd3" }
serde_json = "1.0.141"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
