[package]
name = "bollar_money_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
hex = "0.4.3"
ic-stable-structures = "0.6.9"
ciborium = "0.2.2"
ree-types = { git = "https://github.com/octopus-network/ree-types.git", rev = "3d0fb503384082bdeaf368305c4229801ee9ebd3" }
serde_json = "1.0.141"
bitcoin = "0.31.1"
secp256k1 = "0.28.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
base58 = "0.2.0"
base64 = "0.21.5"
rand = "0.8.5"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
aes-gcm = "0.10.3"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
